--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix ../frontend",
     "dev": "concurrently \"npm start \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm install --prefix frontend && npm run build --prefix frontend"
+    "render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build -- prefix client"
+
   },
   "author": "",
   "license": "ISC",
